GeneUtils: PanelBuilder: replace Blastn scoring with probe quality profile (#725)